<resources>
    <string name="app_name">MVPApplication</string>
    <string name="platform">工作台</string>
    <string name="message">消息</string>
    <string name="tools">工具箱</string>
    <string name="me">我</string>

    <string name="wifi_connected">无线网络已连接</string>
    <string name="mobile_connected">移动数据网络已连接</string>
    <string name="no_net_connected">当前网络断开连接</string>

    <string name="qrcode_scan">扫一扫</string>
    <string name="open_camera_failed">打开相机失败</string>
    <string name="check_gis_map">查看地图</string>
    <string name="select_qr_code_from_ablum">从相册选取二维码</string>
    <string name="scan_fail">扫描失败</string>

    <string name="compass_name">指南针</string>
    <string name="note_name">便签</string>
    <string name="weather_sign">天气</string>
    <string name="string_help">帮助</string>
    <string name="string_suggestion">意见反馈</string>
    <string name="string_about">关于</string>
    <string name="string_setting">设置</string>

</resources>
